# qtest

./: README.md  mypy.ini  pyproject.toml
src/qtest/: main.py
src/qtest/commands/: test1.py
