[tool.poetry]
name = "qtest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qtest", from = "src"}]

[tool.poetry.scripts]
main = "qtest.main:main"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.1.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
